pruebas saber pro cronbach's alpha

--- a/ModeloPredictivo/Analisis Exploratorio.ipynb
+++ b/ModeloPredictivo/Analisis Exploratorio.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1337,14 +1337,14 @@
        "[21 rows x 21 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_corr = data_norm.corr(method='pearson') #data_corr obtendra la correlación por el metodo de pearson del dataset\n",
-    "| #Se imprime la tabla de correlación"
+    "data_corr#Se imprime la tabla de correlación"
    ]
   },
   {
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -1364,10 +1364,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f96bc200a10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8d7d6fcc90>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1400,28 +1400,32 @@
     "## Evaluacion de Confiabilidad de la Encuesta\n",
     "Conceptualmente la fiabilidad refleja hasta qué punto las puntuaciones percibidas por los estudiantes a través de las respuestas están relacionadas con las puntuaciones, esto es, el grado en que las mediciones están libres de la desviación producida por los errores casuales (valores aleatorios). En definitiva, la fiabilidad garantiza que la escala siempre mide lo mismo.\n",
     "\n",
-    "Para la valoracion se toma la muestra de 933 estudiantes y se aplicara el estadístico Alpha de Cronbach."
+    "Para la valoracion se toma la muestra de 933 estudiantes y se aplicara el estadístico Alpha de Cronbach. Primero necesitamos garantizar que la encuesta de la SWLS fue optima, asi luego podemos unir las nuevas variables y realizar su respectivo estudio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Alpha de Cronbach en SWLS\n",
+    "    1.RESULTADO POR PRIMER PROCEDIMENTO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6868445019978058"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def svar(X):\n",
     "    n = float(len(X))#obtenemos la cantidad de datos\n",
     "    #obtenemos la variacion de un conjunto unidimensional de datos\n",
@@ -1436,12 +1440,203 @@
     "       for i in range(len(item)):\n",
     "          tscores[i]+= item[i]\n",
     "    nitems = len(itemscores)\n",
-    "    #print \"total scores=\", tscores, 'number of items=', nitems\n",
+    "    #print \"total scores=\", tscores, 'number of items=', nitems 045\n",
     "    #Formula de alfa de cronbach\n",
-    "    Calpha= nitems/(nitems-1.) * (1-sum(itemvars)/ svar(tscores))#-------\n",
+    "    Calpha= (nitems/(nitems-1.) * (1-sum(itemvars)/ svar(tscores)))#-------\n",
     "\n",
-    "    return Calpha\n",
-    "\n",
+    "    return Calpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9050110162191658"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CronbachAlpha2([data_norm['Pregunta1'], data_norm['Pregunta2'], data_norm['Pregunta3'],\n",
+    "                data_norm['Pregunta4'], data_norm['Pregunta5']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    2.RESULTADO POR SEGUNDO PROCEDIMIENTO (CORRELACIONES)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pregunta1</th>\n",
+       "      <th>Pregunta2</th>\n",
+       "      <th>Pregunta3</th>\n",
+       "      <th>Pregunta4</th>\n",
+       "      <th>Pregunta5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>0.833333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Pregunta1  Pregunta2  Pregunta3  Pregunta4  Pregunta5\n",
+       "0   0.666667   1.000000   0.833333   1.000000   1.000000\n",
+       "1   0.500000   0.666667   0.500000   0.500000   0.500000\n",
+       "2   0.333333   0.500000   0.666667   0.833333   0.000000\n",
+       "3   0.833333   0.666667   0.666667   0.833333   0.833333\n",
+       "4   0.666667   0.500000   0.500000   0.333333   0.000000"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_norm_swls = data_norm.drop(['Numero_Matricula', 'Sexo', 'Edad', 'Estado_Civil', 'Valor_Matricula',\n",
+    "                                 'Vive_Con_Padres', 'Cabeza_Familia', 'Num_Personas_A_Cargo', 'Estrato',\n",
+    "                                 'Ingreso_Familiar_Mensual', 'Trabaja_Actualmente', 'Horas_Trabajadas',\n",
+    "                                 'Educacion_Padre', 'Educacion_Madre', 'Ocupacion_Madre', 'Ocupacion_Padre',],\n",
+    "                               axis='columns')\n",
+    "data_norm_swls.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9053366199372834"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N = data_norm_swls.shape[1]#Cantidad de variables utilizadas\n",
+    "data_corr_swls = data_norm_swls.corr(method='pearson')\n",
+    "rs = np.array([])\n",
+    "#sumamos todas las correlaciones del triangulo superior de la matriz de correlaciones\n",
+    "for i, col in enumerate(data_corr_swls.columns): \n",
+    "    sum_ = data_corr_swls[col][i+1:].values \n",
+    "    rs = np.append(sum_, rs)\n",
+    "mean_r = np.mean(rs) #Obtenemos el promedio de rs 036\n",
+    "cronbach_alpha = (N*mean_r)/(1+(N-1)* mean_r) #A través de la formula de alfa de cronbach obtenemos el valor\n",
+    "cronbach_alpha"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como se puede observar los resultados obtenidos por los dos distintos procedimientos nos dan similar con un puntaje del 0.90 (90%), por ende se concluye que el cuestionario de swls aplicado para los 933 estudiantes fue excelente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Alpha de Cronbach a Cuestionario\n",
+    "    1.RESULTADO POR PRIMER PROCEDIMENTO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6868445019978058"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "CronbachAlpha2([data_norm['Numero_Matricula'],data_norm['Sexo'], data_norm['Edad'], data_norm['Estado_Civil'],\n",
     "               data_norm['Valor_Matricula'], data_norm['Vive_Con_Padres'], data_norm['Cabeza_Familia'],\n",
     "               data_norm['Num_Personas_A_Cargo'], data_norm['Estrato'], data_norm['Ingreso_Familiar_Mensual'],\n",
@@ -1456,12 +1651,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Alpha de Cronbach Utilizando La Correlacion "
+    "    2. Resultado por segundo procedimiento (Correlaciones)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1470,7 +1665,7 @@
        "0.6818031727331921"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,9 +1677,16 @@
     "for i, col in enumerate(data_corr.columns): \n",
     "    sum_ = data_corr[col][i+1:].values \n",
     "    rs = np.append(sum_, rs)\n",
-    "mean_r = np.mean(rs) #Obtenemos el promedio de rs\n",
+    "mean_r = np.mean(rs) #Obtenemos el promedio de rs 036\n",
     "cronbach_alpha = (N*mean_r)/(1+(N-1)* mean_r) #A través de la formula de alfa de cronbach obtenemos el valor\n",
     "cronbach_alpha#------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obteniendo un resultado del 0.68 (68%) en los dos procedimientos utilizando el alpha de cronbach, se concluye que el cuestionario completo realizado a los 933 estudiantes es muy buena."
    ]
   },
   {
